[tool.poetry]
name = "fmp_extension"
version = "0.0.1"
description = ""
authors = ["fmp_extension <2541874972@qq.com>"]
readme = "README.md"
packages = [{ include = "openbb_fmp_extension" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openbb-core = "^1.3.5"
openbb-fmp = "^1.3.3"
openbb = "^4.3.3"
openbb-cli = "^1.1.3"

[tool.poetry.group.dev.dependencies]
openbb-devtools = "^1.3.1"
pytest = "<8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
openbb = "openbb_fmp_extension:fmp_provider"
